--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/ini": "^4.1.1",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
+    "date-fns": "^4.1.0",
     "ini": "^6.0.0"
   }
 }
