--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "ini": "^6.0.0"
   }
 }
