feat: diff command

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brch",
   "version": "0.0.2",
-  "description": "A simple VCS",
+  "description": "brch - A simple version control system for tracking changes in your project",
   "author": "vishalkrsharma",
   "license": "MIT",
   "repository": {
